fix heading and covering of sidebar

--- a/overrides.css
+++ b/overrides.css
@@ -142,3 +142,12 @@ html {
 .example-block:nth-child(1) .snippet-comment {
   @apply mt-4;
 }
+
+.examples-content h1 {
+  padding-right: 150px; /* width of "edit on github button*/
+}
+
+.example-command {
+  width: 100%;
+  overflow: scroll;
+}
